<resources>
    <string name="app_name">WhereToBuy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="short_name">Short Name</string>
    <string name="dollar_sign">$</string>
    <string name="save">Save</string>
    <string name="rrp">RRP</string>
    <string name="chemist_warehouse">Chemist Warehouse</string>
    <string name="priceline_pharmacy">Priceline Pharmacy</string>
    <string name="pharmacy_4less">Pharmacy 4Less</string>
    <string name="terrywhite_chemmart">TerryWhite Chemmart</string>
    <string name="healthyworld_pharmacy">HealthyWorld Pharmacy</string>
    <string name="recommendations">Recommendations:</string>
    <string name="NA">NA</string>
    <string name="last_update_date_is">Latest update: on </string>
    <string name="text_for_first_run">Sorry! Products\' information needs to be downloaded</string>
    <string name="is_your_favourite">is your favourite?</string>
    <string name="product_image">product_image</string>
    <string name="facebook_app_id">444563632567800</string>
    <string name="search_hint">Enter a product name</string>
    <string name="price">Price</string>
    <string name="information">Information</string>
    <string name="website">Website</string>
    <string name="you_ve_reached_the_top">You\'ve reached the top</string>
    <string name="space"/>
    <string name="chemist_warehouse_icon">Chemist Warehouse Icon</string>
    <string name="priceline_icon">Priceline Icon</string>
    <string name="_4_less_icon">4 less Icon</string>
    <string name="terry_white_icon">Terry White Icon</string>
    <string name="health_world_icon">Health World Icon</string>
    <string name="no_results_found">no results found</string>
    <string name="favourite_icon">Favourite Icon</string>
</resources>
