<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/overall_margin"
              android:layout_marginBottom="@dimen/overall_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/products_label">

        <TextView
            android:id="@+id/shortName_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:text="@string/short_name"
            android:textAlignment="center"
            android:layout_weight="8"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_big"/>


        <ImageView
            android:id="@+id/cmw_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            app:srcCompat="@drawable/kmwicon"
            android:contentDescription="@string/chemist_warehouse_icon"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/pl_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            app:srcCompat="@drawable/plicon"
            android:contentDescription="@string/priceline_icon"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/fl_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            app:srcCompat="@drawable/flicon"
            android:contentDescription="@string/_4_less_icon"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/tw_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            app:srcCompat="@drawable/twicon"
            android:contentDescription="@string/terry_white_icon"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/hw_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            app:srcCompat="@drawable/hwicon"
            android:contentDescription="@string/health_world_icon"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/spaceText"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:textSize="@dimen/textsize_medium"
            android:layout_weight="1"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="#40ffffff"
            android:text="@string/space"/>

    </LinearLayout>

    <TextView
        android:id="@+id/products_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:textSize="@dimen/textsize_medium"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:background="#40ffffff"
        android:text="@string/you_ve_reached_the_top"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/productsRecyclerView"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>