<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/detailCMWLabel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/chemist_warehouse"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detailPLLabel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/priceline_pharmacy"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detailFLLabel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/pharmacy_4less"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detailTWLabel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/terrywhite_chemmart"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detailHWLabel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/healthyworld_pharmacy"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/detailCMWPrice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            tools:text="$99.99"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detailPLPrice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            tools:text="$99.99"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detailFLPrice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            tools:text="$99.99"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detailTWPrice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            tools:text="$99.99"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detailHWPrice"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:text="$99.99"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/cwh_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/website"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/pl_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/website"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/fl_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/website"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/tw_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/website"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/hw_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/website"
            android:textSize="12sp"/>

    </LinearLayout>

</LinearLayout>
    </ScrollView>